Updated extension to make a call to the background file and mute the current tab. Working on sending the response back to the content script after completing the muting process.

--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,9 @@
   	},
   	"permissions": [
 	    "activeTab",
-    	"storage"
+    	"storage",
+        "https://go.twitch.tv/",
+        "https://www.google.com/"
   	],
   	"content_scripts": [
 	  	{
