Updated code to mute twitch when set. And updated code to store the mute status to persist after refresh and work on other tabs. Need to figure out how to unmute the tab when the page's URL changes.

--- a/manifest.json
+++ b/manifest.json
@@ -5,18 +5,18 @@
   	"version": "1.0",
 
   	"browser_action": {
-    	"default_icon": "mute-icon.png"
-    	// "default_popup": "mute.html"
+    	"default_icon": "mute-icon.png",
+    	"default_popup": "mute.html"
   	},
   	"permissions": [
 	    "activeTab",
     	"storage",
-        "https://go.twitch.tv/",
-        "https://www.google.com/"
+        "http://*/*",
+        "https://*/*"
   	],
   	"content_scripts": [
 	  	{
-			"matches": ["https://go.twitch.tv/", "https://www.google.com/"],
+			"matches": ["http://*/*", "https://*/*"],
 	 	   	"js": ["mute.js"],
 	 	   	"run_at": "document_end"
 	  	}
